<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="25dp"
        android:text="@string/Saque"
        android:textColor="#3F51B5"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="50dp"
        android:text="@string/FGTS"
        android:textColor="#3F51B5"
        android:textSize="70sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="170dp"
        android:text="@string/cpf"
        android:textColor="#3F51B5"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/cpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:ems="20"
        android:textSize="25sp"
        android:backgroundTint="#3F51B5"
        android:textColor="#3F51B5"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="10dp"
        android:textSize="30sp"
        android:textColor="#3F51B5"
        android:text="@string/datanascimento" />

    <EditText
        android:id="@+id/datadatanascimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:ems="10"
        android:textSize="25sp"
        android:textColor="#3F51B5"
        android:backgroundTint="#3F51B5"
        android:inputType="date" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:backgroundTint="#3F51B5"
        android:onClick="validar"
        android:text="@string/salvar"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="470dp"
        android:backgroundTint="#3F51B5"
        android:onClick="sair"
        android:text="@string/Sair"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="bold" />

</RelativeLayout>