<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SaqueFgts">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="30dp"
        android:text="@string/Parcelas"
        android:textColor="#3F51B5"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/primeiraparcela"
        android:layout_width="400dp"
        android:layout_height="90dp"
        android:gravity="center|center_vertical"
        android:textColor="#3F51B5"
        android:textStyle="bold"
        android:textSize="25sp"
        android:padding="10dp"
        android:layout_marginTop="100dp"
        android:text="@string/primeiraparcela"
        />

    <TextView
        android:id="@+id/segundaparcela"
        android:layout_width="400dp"
        android:layout_height="90dp"
        android:gravity="center|center_vertical"
        android:textColor="#3F51B5"
        android:textStyle="bold"
        android:textSize="25sp"
        android:padding="10dp"
        android:layout_marginTop="200dp"
        android:text="@string/segundaparcela"
        />
    <TextView
        android:id="@+id/terceiraparcela"
        android:layout_width="400dp"
        android:layout_height="90dp"
        android:gravity="center|center_vertical"
        android:textColor="#3F51B5"
        android:textStyle="bold"
        android:textSize="25sp"
        android:padding="10dp"
        android:layout_marginTop="300dp"
        android:text="@string/terceiraparcela"
        />

</RelativeLayout>